# juggernaut-autonomy

./: .coderabbit.yaml  .env.example  .gitignore  .mcp.json  AUDIT_REPORT.md  CLAUDE.md  CLAUDE_CODE_AUDIT.md  COMPLETION_BLOCKERS.md  CONTRIBUTING.md  Dockerfile  Dockerfile.dashboard  Dockerfile.litellm  Dockerfile.orchestrator  Dockerfile.salesform  JUGGERNAUT_STATUS.md  README.md  auth.py  auth_manager.py  auth_service.py  billing_service.py  config.example.json  config.json  config.py  content_pipeline.py  dashboard_api_main.py  db_check_domain_flip_status.py  db_check_tasks.py  db_debug_task_row.py  db_inspect_goals.py  db_inspect_mission.py  db_seed_domain_flip.py  debug_task_row.json  delivery_service.py  domain_flip_task_status.json  e2e_verification.py  error_handler.py  financial_model.py  fulfillment_manager.py  health_endpoints.py  inspect_domain_flip_candidates.json  (+44 more)
acquisition/: lead_manager.py  onboarding_manager.py  payment_processor.py  pipeline.py
admin/: admin_api.py  dashboard.py
agents/: .gitkeep
alerts/: revenue_alerts.yaml
api/: .gitkeep  __init__.py  account_automation.py  acquisition_api.py  activity_stream.py  api_server.py  approvals_api.py  auth.py  auth_api.py  auth_middleware.py  b2b_api.py  billing.py  billing_api.py  billing_integration.py  billing_processor.py  billing_service.py  brain.py  brain_api.py  brain_stream.py  chat_sessions.py  code_api.py  customer_api.py  customer_manager.py  customer_onboarding.py  customer_portal.py  customer_support.py  dashboard.py  delivery_service.py  engine_api.py  executive_dashboard.py  experiments_api.py  files_api.py  fraud_detection.py  fulfillment_service.py  github_api.py  health.py  internal_dashboard.py  lead_scoring.py  logs_api.py  marketing_api.py  (+41 more)
auth/: auth.py  auth_handler.py  auth_service.py  service.py  user_manager.py  users.py
automation/: customer_onboarding.py  error_handler.py  fulfillment_manager.py  onboarding_manager.py  payment_processor.py  pipeline.py  pricing_optimizer.py  revenue_automation.py  revenue_generator.py  revenue_manager.py
autonomous/: revenue_system.py
autonomous_revenue/: engine.py  monitoring.py  onboarding.py  payment_processor.py  service_delivery.py  system.py
backup/: config.py
billing/: api.py  automated_billing.py  billing_manager.py  billing_operations.py  billing_service.py  billing_system.py  core.py  email_service.py  fraud_detection.py  integration.py  integrations.py  invoice_generator.py  invoice_manager.py  models.py  payment_gateway.py  payment_processor.py  payment_processors.py  payment_providers.py  payment_service.py  processors.py  providers.py  retry_logic.py  revenue_recognition.py  saas_platform.py  service.py  services.py  stripe_client.py  stripe_integration.py  subscription_manager.py  subscriptions.py  transaction_manager.py  transaction_processor.py  webhooks.py
bots/: marketing_funnel.py
config/: revenue_config.py  stripe_config.py
content_pipeline/: __init__.py  generator.py  publisher.py
core/: __init__.py  acquisition_manager.py  acquisition_pipeline.py  ad_manager.py  agent_coordinator.py  agents.py  ai_executor.py  aider_executor.py  alert_rules.py  alerting.py  analytics.py  approval.py  arbitrage_system.py  audit.py  auth.py  auth_manager.py  auto_scaling.py  automated_billing.py  automation.py  automation_engine.py  automation_manager.py  automation_proposals.py  automation_runner.py  autonomous_agents.py  autonomous_engine.py  autonomous_manager.py  autonomous_mvp.py  autonomous_operator.py  autonomous_platform.py  autonomous_revenue.py  autonomous_revenue_engine.py  autonomous_revenue_manager.py  autonomous_service.py  autonomous_system.py  autonomy_loop.py  autoscaler.py  autoscaling.py  billing.py  billing_engine.py  billing_manager.py  (+194 more)
dashboard/: package.json  (+4 more)
(+590 files in other folders)
